# splitway

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  flake.nix  index.html  splitway.gpg
.claude/skills/platform-dns/: SKILL.md
.github/workflows/: build.yml  build_bin_dev.yml  ci.yml  packaging.yml  release.yml
arch/release/x86_64/: splitway-0.0.6-1-x86_64.pkg.tar.zst  splitway-0.0.6-1-x86_64.pkg.tar.zst.sig  splitway-debug-0.0.6-1-x86_64.pkg.tar.zst  splitway-debug-0.0.6-1-x86_64.pkg.tar.zst.sig  splitway-gui-0.0.6-1-x86_64.pkg.tar.zst.sig  splitway-gui-debug-0.0.6-1-x86_64.pkg.tar.zst  splitway-gui-debug-0.0.6-1-x86_64.pkg.tar.zst.sig  splitway.db.tar.gz.sig
docs/: architecture.md
docs/design/: README.md  gui-core-extraction.md  linux-default-route-catch-all.md  linux-distro-packaging.md  macos-dns-privacy.md  macos-self-install.md  socket-group.md  tauri-design-window.md  tauri-mutations.md  tauri-read-only.md  verify-readback-drift.md
docs/design/mockups/: splitway-mockup-variant-b.html  splitway-states.html
docs/prompts/: docs-sync.md  phase-0-foundation.md  phase-0.5-nixos-packaging.md  phase-1-abstraction-split.md  phase-2-daemon-ipc.md  phase-3a-openvpn-nm.md  phase-3b-macos.md  phase-3c-openvpn-standalone.md  phase-4-gui.md  phase-5-gui-usability.md  phase-5-live-config.md  security-scrub.md
nix/: module.nix
nix/tests/: socket-group.nix
packaging/: README.md
packaging/aur/splitway/: PKGBUILD  splitway.install
packaging/aur/splitway-bin/: PKGBUILD  splitway-bin.install
packaging/aur/splitway-gui/: PKGBUILD  splitway-gui.install
packaging/ci/: build-apt-repo.sh  build-dnf-repo.sh  check-pkgver-sync.sh  compute-version.sh  render-index.sh  sync-pkgver.sh
packaging/deb-maintainer-scripts/: .gitkeep
packaging/desktop/: io.github.stslex.splitway.desktop
packaging/gui/: socket-group.conf
packaging/gui-maintainer-scripts/: postinst  postrm
packaging/icons/: generate-hicolor.sh
packaging/launchd/: com.splitway.daemon.gui.plist  com.splitway.daemon.plist
packaging/systemd/: splitway.service
rpm/dev/: splitway-0.0.5~dev.20260625220053.b210631.aarch64.rpm  splitway-0.0.5~dev.20260625220053.b210631.x86_64.rpm  splitway-0.0.6~dev.20260626051837.12.6f7c141.aarch64.rpm  splitway-0.0.6~dev.20260626051837.12.6f7c141.x86_64.rpm  splitway-0.0.6~dev.20260626054222.14.4f3d086.aarch64.rpm  splitway-0.0.6~dev.20260626054222.14.4f3d086.x86_64.rpm  splitway-0.0.6~dev.20260626061505.16.672a9e6.aarch64.rpm  splitway-0.0.6~dev.20260626061505.16.672a9e6.x86_64.rpm  splitway-0.0.6~dev.20260626064926.18.d0d8956.aarch64.rpm  splitway-0.0.6~dev.20260626064926.18.d0d8956.x86_64.rpm  splitway-0.0.6~dev.20260626111028.20.d363052.aarch64.rpm  splitway-0.0.6~dev.20260626111028.20.d363052.x86_64.rpm  splitway-0.0.6~dev.20260626172444.22.f86729e.aarch64.rpm  splitway-0.0.6~dev.20260626172444.22.f86729e.x86_64.rpm  splitway-0.0.6~dev.20260626210611.25.bfc4180.aarch64.rpm  splitway-0.0.6~dev.20260626210611.25.bfc4180.x86_64.rpm  splitway-0.0.7~dev.20260626213732.27.ffc6b45.aarch64.rpm  splitway-0.0.7~dev.20260626213732.27.ffc6b45.x86_64.rpm  splitway-0.0.7~dev.20260627092747.29.5055580.aarch64.rpm  splitway-0.0.7~dev.20260627092747.29.5055580.x86_64.rpm  splitway-0.0.7~dev.20260627100216.31.eca3d2a.aarch64.rpm  splitway-0.0.7~dev.20260627100216.31.eca3d2a.x86_64.rpm  splitway-0.0.7~dev.20260627120402.33.3a27b7c.aarch64.rpm  splitway-0.0.7~dev.20260627120402.33.3a27b7c.x86_64.rpm  splitway-0.0.7~dev.20260629192144.48.a58c2d4.aarch64.rpm  splitway-0.0.7~dev.20260629192144.48.a58c2d4.x86_64.rpm  splitway-0.0.7~dev.20260702063544.50.196df40.aarch64.rpm  splitway-0.0.7~dev.20260702063544.50.196df40.x86_64.rpm
rpm/dev/repodata/: 028fa6c093e758884613de43572b72dc1a385eee45ed3af6ca9b31d89bc29374-primary.sqlite.bz2  0cefbd61589bed7e164f40ca9987f726ac7237351231464cd43cd974d7da407b-filelists.sqlite.bz2  15f293b79532492aab02fc608c80cf6b1d72ca16ec3f89b01bfad8021f11fd92-primary.sqlite.bz2  (+41 more)
rpm/release/: splitway-0.0.6.aarch64.rpm  splitway-0.0.6.x86_64.rpm
scripts/: check-no-leaked-infra.sh
splitway-cli/: Cargo.toml
splitway-cli/src/: main.rs
splitway-daemon/: Cargo.toml
splitway-daemon/src/: exec.rs  main.rs
splitway-daemon/src/backend/: linux.rs  macos.rs  mod.rs  windows.rs
splitway-daemon/src/backend/linux/: backend.rs  mod.rs  query.rs  status.rs
splitway-daemon/src/backend/macos/: backend.rs  demote.rs  mod.rs  resolver.rs
splitway-daemon/src/command/: mod.rs  parser.rs
splitway-daemon/src/config/: controller.rs  mod.rs
splitway-daemon/src/daemon/: ipc.rs  mod.rs  state.rs
splitway-daemon/src/detector/: macos.rs  mod.rs  windows.rs
splitway-daemon/src/detector/linux/: dbus.rs  detector.rs  mod.rs  parser.rs  state.rs
splitway-daemon/src/detector/linux/openvpn/: detector.rs  mgmt.rs  mod.rs  parser.rs  state.rs
splitway-daemon/src/detector/macos/: detector.rs  mod.rs  parser.rs  state.rs  watch.rs
splitway-daemon/src/interfaces/: mod.rs
splitway-gui/: Cargo.toml
splitway-gui-core/: Cargo.toml
splitway-gui-core/src/: command.rs  lib.rs  model.rs  snapshot.rs  state.rs
splitway-gui-tauri/: .gitignore  Cargo.toml  build.rs  tauri.bundle.macos.json  tauri.conf.json
splitway-gui-tauri/capabilities/: default.json
splitway-gui-tauri/scripts/: bootstrap.sh  build-macos-app.sh
splitway-gui-tauri/src/: bridge.rs  lib.rs  main.rs
splitway-gui-tauri/ui/: build.sh  index.html  package.json  test.sh  tsconfig.json
splitway-gui-tauri/ui/src/: api.ts  app.ts  config-input.ts  contract-check.ts  domain-undo.ts  lifecycle.ts  main.ts  render.ts  styles.css  tauri-global.d.ts
splitway-gui-tauri/ui/src/bindings/: view-model.sample.json  view-model.ts
splitway-gui-tauri/ui/src/fonts/: README.md
splitway-gui-tauri/ui/test/: chip.test.ts  config-input.test.ts  domain-undo.test.ts  main-mode.test.ts  stage.test.ts
splitway-gui/src/: app.rs  main.rs  model.rs  worker.rs
splitway-shared/: Cargo.toml
splitway-shared/src/: domain.rs  ipc.rs  lib.rs  platform.rs
splitway-shared/src/config/: mod.rs
(+60 files in other folders)
