[package]
name = "splitway-daemon"
version = "0.0.5"
edition = "2021"

[dependencies]
splitway-shared = { path = "../splitway-shared" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.20"
env_logger = "0.11"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "net",
    "io-util",
    "signal",
    "time",
] }
# Live config-file watch (inotify on Linux, FSEvents on macOS). Default features
# enable the cross-platform backends; no extra system dependency is pulled in.
notify = "6"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }

# SCDynamicStore VPN/DNS event source. core-foundation is pinned to 0.9 to match
# system-configuration 0.7's own dependency — 0.10 would resolve to a second,
# incompatible core_foundation and break the CFArray/CFRunLoop types.
# libc supplies `getifaddrs` for the read-only interface enumeration
# (`ListInterfaces`); Linux uses `/sys/class/net` instead, so it needs no dep.
[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.7"
core-foundation = "0.9"
libc = "0.2"
