[package]
name = "splitway-shared"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Splitway shared types, config parsing, and platform traits"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.20"
env_logger = "0.11"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
